++ p2p peer connection status +- p2p peer blockchain status